# BizLens

./: .gitignore  DEPLOYMENT.md  fly.toml  memo.txt  package-lock.json  package.json  railway.json  render.yaml  vercel.json
backend/: .gitignore  Dockerfile  data_collect.md  debug_login_form.html  debug_login_page.html  debug_nikkei_2024_12.html  debug_nikkei_2024_2.html  debug_nikkei_2024_8.html  debug_nikkei_2025_1.html  debug_nikkei_company_2914.html  debug_nikkei_company_3382.html  debug_nikkei_company_4063.html  debug_nikkei_company_4502.html  debug_nikkei_company_4755.html  debug_nikkei_company_6367.html  debug_nikkei_company_6501.html  debug_nikkei_company_6503.html  debug_nikkei_company_6702.html  debug_nikkei_company_6758.html  debug_nikkei_company_6861.html  debug_nikkei_company_6902.html  debug_nikkei_company_6954.html  debug_nikkei_company_6981.html  debug_nikkei_company_7011.html  debug_nikkei_company_7203.html  debug_nikkei_company_7267.html  debug_nikkei_company_7751.html  debug_nikkei_company_7974.html  debug_nikkei_company_8031.html  debug_nikkei_company_8035.html  debug_nikkei_company_8058.html  debug_nikkei_company_8306.html  debug_nikkei_company_8316.html  debug_nikkei_company_8766.html  debug_nikkei_company_9432.html  debug_nikkei_company_9433.html  debug_nikkei_company_9434.html  debug_nikkei_company_9983.html  debug_nikkei_company_9984.html  dump.rdb  (+11 more)
backend/app/: main.py
backend/data/: financial_reports.json
backend/scripts/: add_ceo_column.py  add_company_type_column.py  check_countries_data.py  check_env.py  check_table_structure.py  cleanup_abnormal_tickers.py  create_companies_cn_table.py  merge_earnings_and_create_us_table.py  rename_companies_table.py  test_ai_collector.py  test_china_company_collection.py
backend/test_output/: test_data_6758.json  test_data_7203.json  (+1 more)
(+315 files in other folders)
