[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.6"}
psycopg = {extras = ["binary"], version = "^3.2.3"}
supabase = "^2.10.0"
google-cloud-bigquery = "^3.27.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
openai = "^1.57.4"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
httpx = ">=0.26,<0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
