[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.6"}
psycopg = {extras = ["binary"], version = "^3.2.3"}
supabase = "^2.10.0"

python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
openai = "^1.57.4"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
httpx = ">=0.26,<0.28"
snowflake-connector-python = "^3.17.2"
beautifulsoup4 = "^4.13.4"
pandas = "^2.3.2"
numpy = "^2.3.2"
selenium = "^4.35.0"
requests = "^2.32.5"
lxml = "^6.0.1"
openpyxl = "^3.1.5"
yfinance = "^0.2.65"
tradingview-ta = "^3.3.0"
apscheduler = "^3.11.0"
redis = "^6.4.0"
fastapi-cache2 = "^0.2.2"
fastapi-limiter = "^0.1.6"
slowapi = "^0.1.9"
python-jose = "^3.5.0"
google-auth = "^2.35.0"
google-api-python-client = "^2.150.0"
google-auth-httplib2 = "^0.2.0"
playwright = "^1.48.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
